--- a/pom.xml
+++ b/pom.xml
@@ -3,36 +3,24 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	
 	<artifactId>filetest</artifactId>
-	
-    <version>1.0.0-SNAPSHOT</version>
-    
+	<version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
-
-	<name>filetest</name>
+    <name>filetest</name>
 
     <properties>
-    
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<app.runtime>4.3.0</app.runtime>
-		
-		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
-		
-		
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <app.runtime>4.3.0</app.runtime>
+     	<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
 	</properties>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				
-				<artifactId>maven-clean-plugin</artifactId>
-				
-				<version>3.0.0</version>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
@@ -40,6 +28,16 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+				<cloudHubDeployment>
+				<username>vedant_august</username>
+				<password>notTODAY#2</password>
+				<environment>Sandbox</environment>
+				<workers>1</workers>
+				<workerType>Micro</workerType>
+				<applicationName>worldtimezone-Service</applicationName>
+				<muleVersion>4.3.0</muleVersion>
+				</cloudHubDeployment>
+				
 				</configuration>
 			</plugin>
 		</plugins>
